# data-pipeline-e-commerce

./: .gitignore  README.md
e-commerce/: README.md  pyproject.toml  setup.cfg  setup.py
e-commerce/data/: interview_customers.csv  interview_items.csv  interview_orders.csv
e-commerce/e_commerce/: assets.py  definitions.py
